8253351: MediaPlayer does not display an mp4 if there no speakers connected to the PC's